# CoROLLA

./: .gitignore  CMakeLists.txt  README.md  util.cpp  util.h
addressability/: CMakeLists.txt  addressability.cpp  pointer_escapes.cpp  track_base_ptr.cpp  wrap_addresstaken_funcs.cpp
breakconstantgeps/: BreakConstantGEPs.cpp  CMakeLists.txt
callsiteanalysis/: callsiteanalysis.cpp
compileOTF/: CMakeLists.txt  compileOTF.cpp
include/corolla/: util.h
include/corolla/compileOTF/: compileOTF.h
include/corolla/instrpointoptimization/: hoistloopmemaccesses.h
include/corolla/pointerdetection/: pointerdetection.h
include/corolla/reachability/: reachingdefinitions.h
include/corolla/safetyanalysis/: safetyanalysis.h
include/llvm-util/compileOTF/: compileOTF.h
include/llvm-util/instrpointoptimization/: hoistloopmemaccesses.h
include/llvm-util/pointerdetection/: pointerdetection.h
include/llvm-util/reachability/: sparse_reachability_graph.h
include/llvm-util/safetyanalysis/: allocationbounds.h  pass.h
include/llvm-utils/: util.h
include/llvm-utils/addressability/: addressability.h
include/llvm-utils/callsiteanalysis/: callsiteanalysis.h
include/llvm-utils/instrpointoptimization/: dominationpruning.h  hoistloopmemaccesses.h
include/llvm-utils/pointerdetection/: pointerdetection.h
include/llvm-utils/reachability/: sparse_reachability_graph.h
include/llvm-utils/safetyanalysis/: allocationbounds.h  safetyanalysis.h
instrpointoptimization/: CMakeLists.txt  domination_pruning.cpp  loopoptimizations.cpp
pointerdetection/: CMakeLists.txt  pointerdetection.h  pointerdetector.cpp  pointerqueries.cpp  sillyperlanalysis.cpp
reachability/: CMakeLists.txt  cfg_reachability.h  reachingdefinitions.cpp  reachingdefinitions.h
safefunctioncloner/: CMakeLists.txt  safefunctioncloner.cpp  safefunctioncloner.h
safetyanalysis/: CMakeLists.txt  LTOplugin_boilerplate.cpp  allocationbounds.cpp  allocationwrappers.cpp  backupstats.txt  boundschecker.cpp  offsetfinder.cpp  osov_analysis.cpp  pass.cpp  pass.h  passrunner.cpp  runonspec.sh  safetyanalysis.cpp  specout.txt
